--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "axios": "^1.13.4",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
