--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -3,7 +3,7 @@
 spring.application.name=online-book-store
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://group2-container:5432/group2
+spring.datasource.url=jdbc:postgresql://localhost:5432/group2
 spring.datasource.username=group2
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
