--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.13.5",
+    "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^5.0.1"
   },
   "devDependencies": {
